# CAN_communication

./: README.md
cpp/: CMakeLists.txt  can_comm.h  main_reader.cpp  main_sender.cpp
python/: can_connection.py  can_reader.py  can_sender.py  requirements.txt
